# EpitechYear1

./: README.md
Amazed/: Makefile
Amazed/include/: amazed.h  macro.h  my.h
Amazed/ressources/: laby2  laby_big  laby_boucle  labyrinth  no_end_room  no_room  no_start_room  no_tunnels  pipe_room_not_exist
Amazed/src/: algorithm_dfs.c  amazed.c  clear_path.c  display.c  display_moove.c  main.c  open_file.c  parser.c  remove_comment.c  robot_parser.c  rooms_parser.c  set_matrix.c  set_path_inf.c
Amazed/tests/: test_display.c  test_error.c
Corewar/: Makefile
Corewar/champions/: add.s  and.s  pdd.s  sti.s
Corewar/include/: corewar.h  my.h  op.h
Corewar/src/: corewar.c  dump_memory.c  get_in_memory.c  get_instructions.c  get_params.c  init_champs.c  init_corewar.c  load_champs.c  main.c  op.c  put_value.c
Epytodo/: epytodo.sql  package.json
Epytodo/src/: index.js
Myrpg/: Makefile
Myrpg/config/: dialog
Myrpg/include/: functions.h  init_menu.h  macros.h  my.h  struct.h
Myrpg/src/: attack.c  blur  clock.c  dead_anime.c  dialog.c  enemy.c  event.c  frog.c  init.c  (+17 more)
my_navy/: CMakeLists.txt  Makefile
my_navy/include/: my.h  navy.h
my_navy/lib/my/: CMakeLists.txt  Makefile  functions_length.c  functions_u.c  my_getnbr.c  my_put_float.c  my_str_to_word_array.c  my_strcapitalize.c  my_strcpy.c  my_strlentab.c  my_strncmp.c  my_strncpy.c  my_swap.c
my_navy/lib/my/include/: my.h  printf.h
my_navy/src/: connection.c  create_map.c  display_map.c  game.c  get.c  hit.c  modify_map.c  navy.c  put_position.c
my_sokoban/: Makefile
robotfactory/: Makefile
(+167 files in other folders)
